# PlotteR

./: .gitignore  README.md  test.csv
.github/workflows/: rust.yml
PlottR/: Cargo.toml
PlottR/src/: main.rs
plottr/: Cargo.toml
plottr/src/: app.rs  csv_util.rs  lib.rs  main.rs
